--- a/main.html
+++ b/main.html
@@ -7,6 +7,26 @@
 </head>
 
 <body>
+	  <h1>Login Form</h1>
+
+    <div id="login-form">
+        <form id="loginForm" action="#" method="post">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" placeholder="Username" required><br><br>
+
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="Password" required><br><br>
+
+            <input type="checkbox" id="checkbox" name="remember">
+            <label for="checkbox">Remember me</label><br><br>
+
+            <input type="submit" id="submit" value="Submit">
+        </form>
+    </div>
+
+    <div id="existing-user-button" style="display: none;">
+        <button id="existing" onclick="loginAsExisting()">Login as existing user</button>
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
